src/tests/errors/functions/003.ura
// errors/functions/003 — wrong number of arguments
use "@/header"

fn add(a int, b int) int:
    return a + b

main():
    x int = add(1, 2, 3)
    output(x, "\n")
