src/tests/errors/functions/003.err
[1m[0;31merror: [0m'add' expects 2 arguments, got 3
  [1m[34m-->[0m src/tests/errors/functions/003.ura:8:13
  [1m[34m|[0m
[1m[34m8 |[0m     x int = add(1, 2, 3)
  [1m[34m|[0m             [1;31m^^^[0m
